--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,6 +25,12 @@ img {
   font-weight: 600;
 }
 /*Button*/
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover {
+  background-color: inherit;
+  color: #399bd1;
+}
+
 .btn-primary {
   width: 160px;
   padding: 1.3rem 0;
@@ -44,6 +50,9 @@ img {
   box-shadow: 0 0 0 rgba(0, 0, 0, 0.5);
 }
 
+.slick-slide {
+  outline: none;
+}
 /*JUMBOTRON*/
 .slideshow-container {
     width: 100%;
@@ -97,6 +106,18 @@ img {
   background-image: url("../images/jumbotron-duffel.jpg");
 }
 
+@media only screen and (max-width: 767px) {
+  .jumbotron h1 {
+    font-size: 5.7rem;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .jumbotron h1 {
+    font-size: 4rem;
+  }
+}
+
 /*Images Containers*/
 .image-container {
   overflow: hidden;
@@ -108,6 +129,35 @@ img {
 .image-container img:hover {
   opacity: 1;
   transform: scale(1.3);
+}
+
+/* Featured Project */
+
+.featured-project {
+  margin-top: -7rem; /* To account for relatively positioned button */
+}
+
+.featured-project .image-container {
+  height: 19rem;
+  margin-top: 20px; /* To match bootstrap header margins */
+}
+
+.categories h3 {
+  color: #399bd1;
+}
+
+.categories ul {
+  color: rgba(0, 0, 0, 0.7);
+}
+
+/*Projects*/
+
+.project {
+  margin-bottom: 5.85rem;
+}
+.project .image-container {
+  height: 13.5rem;
+  overflow: hidden;
 }
 
 /*help*/
